<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageSelectionActivity">

    <TextView
        android:id="@+id/selectLanguageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_language"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/englishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:textColor="#FFFFFF"
        android:backgroundTint="#449698"
        android:padding="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintTop_toBottomOf="@id/selectLanguageText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/spanishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spanish"
        android:textColor="#FFFFFF"
        android:backgroundTint="#449698"
        android:padding="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintTop_toBottomOf="@id/englishButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/frenchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/french"
        android:textColor="#FFFFFF"
        android:backgroundTint="#449698"
        android:padding="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintTop_toBottomOf="@id/spanishButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
